[package]
name = "geo-geojson"
version = "0.1.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/lelongg/geo-geojson"
documentation = "https://docs.rs/geo-geojson/"
description = "Converts geojson to geo-types"
keywords = ["geo", "geojson"]
categories = ["parsing"]

[dependencies]
geo-types = "0.4.3"
geojson = { version = "0.16.0", features = ["geo-types"] }
num-traits = "0.2.8"

[dev-dependencies]
once_cell = "0.2.6"